# SemiClaw

./: .gitignore  .gitmodules  PROJECT_ARCHITECTURE.md  README.md  build.gradle.kts  chinese_strings_detailed.txt  sync_example_packages.py
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt
app/src/main/cpp/audioaec/: webrtc_aec3_jni.cpp
app/src/main/cpp/streamnative/: StreamOperators.cpp  native_markdown_parser.cpp
app/src/main/java/com/ai/assistance/operit/api/chat/: AIForegroundService.kt  ChatRuntimeHolder.kt
app/src/main/java/com/ai/assistance/operit/api/speech/: DeepgramSttProvider.kt  OpenAISttProvider.kt  PersonalWakeEnrollment.kt  PersonalWakeListener.kt  SherpaMnnSpeechProvider.kt  SherpaSpeechProvider.kt
app/src/main/java/com/ai/assistance/operit/api/voice/: AccessibilityVoiceProvider.kt  HttpVoiceProvider.kt  OpenAIRealtimeVoiceProvider.kt  OpenAIVoiceProvider.kt  SiliconFlowVoiceProvider.kt  VoiceServiceFactory.kt
app/src/main/java/com/ai/assistance/operit/core/application/: ActivityLifecycleManager.kt  OperitApplication.kt
app/src/main/java/com/ai/assistance/operit/core/audio/: AecReferenceAudioBus.kt  MediaPlayerEchoReferenceTap.kt  WebRtcAec3Processor.kt
app/src/main/java/com/ai/assistance/operit/core/config/: FunctionalPrompts.kt  SystemPromptConfig.kt  SystemToolPrompts.kt
app/src/main/java/com/ai/assistance/operit/core/tools/: AIToolHandler.kt  AIToolHook.kt  ToolPackage.kt
app/src/main/java/com/ai/assistance/operit/data/announcement/: RemoteAnnouncementRepository.kt
app/src/main/java/com/ai/assistance/operit/data/api/: GitHubApiService.kt
app/src/main/java/com/ai/assistance/operit/data/backup/: RawSnapshotBackupManager.kt
app/src/main/java/com/ai/assistance/operit/data/collects/: ApiProviderConfigCollect.kt  ScrapedModelPricingRowsCollect.kt
app/src/main/java/com/ai/assistance/operit/data/dao/: ChatDao.kt  MessageDao.kt
app/src/main/java/com/ai/assistance/operit/data/db/: AppDatabase.kt
app/src/main/java/com/ai/assistance/operit/data/mcp/: MCPLocalServer.kt  MCPRepository.kt
app/src/main/java/com/ai/assistance/operit/data/model/: CharacterCard.kt  ChatEntity.kt  ChatHistory.kt  FunctionType.kt  MemorySearchConfig.kt  MemorySearchDebugInfo.kt  Workflow.kt
app/src/main/java/com/ai/assistance/operit/data/preferences/: ApiPreferences.kt  CharacterCardManager.kt  CharacterGroupCardManager.kt  MemorySearchSettingsPreferences.kt  SpeechServicesPreferences.kt  WaifuPreferences.kt
app/src/main/java/com/ai/assistance/operit/data/repository/: AvatarRepository.kt  ChatHistoryManager.kt  CustomEmojiRepository.kt  MemoryRepository.kt
app/src/main/java/com/ai/assistance/operit/data/skill/: SkillRepository.kt
app/src/main/java/com/ai/assistance/operit/integrations/intent/: ExternalChatReceiver.kt
app/src/main/java/com/ai/assistance/operit/plugins/: PluginRegistry.kt
app/src/main/java/com/ai/assistance/operit/plugins/lifecycle/: AppLifecycleHookPluginRegistry.kt
app/src/main/java/com/ai/assistance/operit/plugins/toolbox/: ToolboxPlugin.kt  ToolboxScriptPluginRegistry.kt
app/src/main/java/com/ai/assistance/operit/plugins/toolpkg/: ToolPkgCommonBridgePlugin.kt  ToolPkgHookBridgeSupport.kt  ToolPkgPromptHookBridge.kt  ToolPkgToolLifecycleBridge.kt
app/src/main/java/com/ai/assistance/operit/provider/: MemoryDocumentsProvider.kt
app/src/main/java/com/ai/assistance/operit/services/: ChatServiceCore.kt  CloudEmbeddingService.kt  FloatingChatService.kt
app/src/main/java/com/ai/assistance/operit/services/core/: ApiConfigDelegate.kt  AttachmentDelegate.kt  ChatHistoryDelegate.kt  MessageCoordinationDelegate.kt  TokenStatisticsDelegate.kt
app/src/main/java/com/ai/assistance/operit/util/: AppIconManager.kt  AppLogger.kt  ChatMarkupRegex.kt  GithubReleaseUtil.kt  HttpMultiPartDownloader.kt  ImagePoolManager.kt  MediaPoolManager.kt  OperitPaths.kt
app/src/main/res/drawable/: ic_launcher_simple_foreground.xml
app/src/main/res/values-es/: strings.xml
docs/: TOOLPKG_FORMAT_GUIDE.md  UI_AUTOMATION_ANALYSIS.md  UI_AUTOMATION_FEATURES.md  external_intent_chat.md
docs/package_dev/: chat.md  files.md  memory.md  network.md  results.md  software_settings.md  system.md  tool-types.md  toolpkg.md
examples/: 12306.js  ai_chat.js  all_about_myself.ts  automatic_baidu_map_assistant.js  automatic_bilibili_assistant.js  automatic_ui_subagent.js  automatic_xiaohongshu_assistant.js  baidu_map.js  beeimg_image_uploader.js  bilibili_tools.js  code_runner.ts  crossref.js  crossref.ts  daily_life.ts  douyin_download.js  douyin_download.ts  duckduckgo.js  duckduckgo.ts  extended_chat.js  extended_chat.ts  extended_file_tools.ts  extended_memory_tools.ts  file_converter.js  google_search.js  google_search.ts  jmcomic.js  jmcomic.ts  nanobanana_draw.js  nanobanana_draw.ts  network_test.js  openai_draw.js  openai_draw.ts  pollinations_draw.js  pollinations_draw.ts  qq_intelligent.js  qwen_draw.js  qwen_draw.ts  siliconflow_draw.js  siliconflow_draw.ts  system_tools.js  (+7 more)
examples/apktool/: build_runtime_android_patch.ps1
examples/deepsearching/: tsconfig.json
examples/deepsearching/src/i18n/: en-US.ts  zh-CN.ts
examples/deepsearching/src/planning/: plan-mode-manager.ts  task-executor.ts
examples/deepsearching/src/plugin/: deep-search-plugin.ts
examples/linux_ssh/src/linux_ssh_setup/: index.ui.ts
examples/types/: chat.d.ts  compose-dsl.material3.generated.d.ts  memory.d.ts  software_settings.d.ts  toolpkg.d.ts
gradle/: libs.versions.toml
llama/: CMakeLists.txt  build.gradle.kts
llama/src/main/cpp/: llama_jni_stub.cpp
mmd/: CMakeLists.txt
mmd/src/main/cpp/: mmd_jni.cpp  mmd_physics_stub.cpp
terminal/: build.gradle.kts
terminal/src/main/: AndroidManifest.xml
terminal/src/main/java/com/ai/assistance/operit/terminal/: Pty.kt  SessionManager.kt  TerminalManager.kt
terminal/src/main/res/values/: strings.xml
terminal/src/main/res/values-en/: strings.xml
tools/: execute_js.bat
tools/compose_dsl/: generate_compose_dsl_artifacts.py
tools/compose_dsl/templates/: ToolPkgComposeDslGeneratedRenderers.kt.tpl
(+196 files in other folders)
